Small style update and clean up

--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -4,6 +4,17 @@ form {
 
 .form {
     background-color: lightcoral;
+    
+    input {
+        padding: 8px;
+        font-size: 16px;
+        border: 0;
+    }
+    
+    button {
+        padding: 8px;
+        font-size: 16px;
+    }
 }
 
 .clocks {
