--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -5,8 +5,30 @@ $modularscale: (
     ratio: 1.5
 );
 
+@font-face {
+    font-family: "Space Grotesk";
+    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Regular.woff2");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Space Grotesk";
+    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Bold.woff2");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Space Grotesk";
+    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Light.woff2");
+    font-weight: light;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
+    font-family: Space Grotesk;
 }
 
 body {
