--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -29,6 +29,7 @@ $modularscale: (
 * {
     box-sizing: border-box;
     font-family: Space Grotesk;
+    line-height: 1.61803398875; // golden ratio
 }
 
 body {
@@ -59,6 +60,11 @@ ul {
 button {
     border: none;
     cursor: pointer;
+    box-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.15);
+}
+
+button:hover {
+    box-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.55);
 }
 
 .header {
@@ -80,13 +86,20 @@ form {
     
     input {
         padding: 8px;
-        font-size: 16px;
+        font-size: ms(0);
         border: 0;
+        box-shadow: 0px 1px 1px hsla(0, 0%, 0%, 0.15);
+        margin-left: 6px;
+    }
+
+    input:first-of-type {
+        margin-left: 0;
     }
     
     button {
         padding: 8px;
-        font-size: 16px;
+        font-size: ms(0);
+        margin-left: 6px;
     }
 }
 
