--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -5,26 +5,8 @@ $modularscale: (
     ratio: 1.5
 );
 
-@font-face {
-    font-family: "Space Grotesk";
-    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Regular.woff2");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Space Grotesk";
-    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Bold.woff2");
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Space Grotesk";
-    src: url("./fonts/SpaceGrotesk-1.1.3/SpaceGrotesk-Light.woff2");
-    font-weight: light;
-    font-style: normal;
-}
+@import './colours.scss';
+@import './fonts.scss';
 
 * {
     box-sizing: border-box;
@@ -34,6 +16,8 @@ $modularscale: (
 
 body {
     margin: 0;
+    // background-color: hsla(86, 34.4%, 88%, 1);
+    background-color: $primary_dark;
 }
 
 li {
@@ -41,7 +25,7 @@ li {
 }
 
 a {
-    color: black;
+    color: $primary_light;
     text-decoration: none;
 }
 
@@ -55,6 +39,7 @@ p,
 ul {
     margin: 0;
     padding: 0;
+    color: $primary_light;
 }
 
 button {
@@ -68,13 +53,39 @@ button:hover {
 }
 
 .header {
+    display: flex;
+    align-items: center;
     width: 100%;
     padding: 20px;
-}
 
-.logo {
-    font-size: ms(2);
-    text-transform: uppercase;
+    .logo {
+        font-size: ms(2);
+        text-transform: uppercase;
+        margin-right: auto;
+    }
+
+    a {
+        margin: 0 5px;
+    }
+
+    button {
+        background-color: transparent;
+        color: $primary_light;
+        font-size: ms(0);
+        &:hover {
+            border-bottom: 2px solid $primary_light;
+        }
+    }
+
+    .signUp {
+        border: 2px solid $primary_light;
+
+        &:hover{
+            // border-bottom: none;
+            margin-bottom: 2px;
+        }
+    }
+
 }
 
 form {
@@ -82,7 +93,8 @@ form {
 }
 
 .form {
-    background-color: lightcoral;
+    // background-color: lightcoral;
+    background-color: $secondary_dark;
     
     input {
         padding: 8px;
@@ -97,9 +109,11 @@ form {
     }
     
     button {
-        padding: 8px;
+        padding: 9px;
         font-size: ms(0);
         margin-left: 6px;
+        background-color: $primary_light;
+        color: $primary_dark;
     }
 }
 
@@ -110,13 +124,18 @@ form {
 .clock {
     display: inline-block;
     margin: 5px;
-    padding: 25px;
-    background-color: lightseagreen;
+    padding: 45px 20px;
+    // background-color: lightseagreen;
+
+    // border-top: 8px solid $primary_light;
+    background-color: $primary_light;
     box-shadow: 0px 1px 5px hsla(0, 0%, 0%, 0.15);
+    // box-shadow: 0px 1px 5px $tertiary_dark;
     border-radius: 3px;
 
     * {
         text-align: center;
+        color: $primary_dark;
     }
 
     .time {
