Changing colours from hex to hsl

--- a/ui/src/scss/colours.scss
+++ b/ui/src/scss/colours.scss
@@ -1,6 +1,6 @@
-$primary_dark: #0B1C41;
-$secondary_dark: #0A527E;
-$tertiary_dark: #6C8D8E;
+$primary_dark: hsl(221, 71%, 15%, 1);
+$secondary_dark: hsl(203, 85%, 27%);
+$tertiary_dark: hsl(182, 14%, 49%);
 
-$primary_light: #FAEFD7;
-$accent: #EB8E31;
+$primary_light: hsl(41, 78%, 91%);
+$accent: hsl(30, 82%, 56%);
