Adding Arkipelago font, css updates

--- a/ui/src/scss/colours.scss
+++ b/ui/src/scss/colours.scss
@@ -1,6 +1,7 @@
-$primary_dark: hsl(221, 71%, 15%, 1);
+$primary_dark: hsl(221, 71%, 15%);
 $secondary_dark: hsl(203, 85%, 27%);
 $tertiary_dark: hsl(182, 14%, 49%);
 
 $primary_light: hsl(41, 78%, 91%);
+$primary_light_fade: hsla(41, 78%, 91%, 0.55);
 $accent: hsl(30, 82%, 56%);
