--- a/ui/src/scss/fonts.scss
+++ b/ui/src/scss/fonts.scss
@@ -18,3 +18,8 @@
     font-weight: light;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "Arkipelago";
+    src: url("./fonts/Arkipelago.ttf");
+}
