--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -40,16 +40,12 @@ ul {
     margin: 0;
     padding: 0;
     color: $primary_light;
+    font-weight: normal;
 }
 
 button {
     border: none;
     cursor: pointer;
-    box-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.15);
-}
-
-button:hover {
-    box-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.55);
 }
 
 .header {
@@ -76,6 +72,9 @@ button:hover {
         color: $primary_light;
         font-size: ms(0);
         padding: 6px 8px;
+
+        // transition: border-bottom 2s ease;
+
         &:hover {
             border-bottom: 2px solid $primary_light;
         }
@@ -83,9 +82,8 @@ button:hover {
 
     .signUp {
         border: 2px solid $primary_light;
-
+        // transition: margin-bottom 2s ease;
         &:hover{
-            // border-bottom: none;
             margin-bottom: 2px;
             // background-color: $primary_light_fade;
         }
@@ -93,63 +91,90 @@ button:hover {
 
 }
 
-form {
-    padding: 25px;
-}
-
-.form {
-    // background-color: lightcoral;
-    background-color: $secondary_dark;
-    
-    input {
-        padding: 8px;
-        font-size: ms(0);
-        border: 0;
-        box-shadow: 0px 1px 1px hsla(0, 0%, 0%, 0.15);
-        margin-left: 6px;
-    }
-
-    input:first-of-type {
-        margin-left: 0;
-    }
-    
-    button {
-        padding: 9px;
-        font-size: ms(0);
-        margin-left: 6px;
-        background-color: $primary_light;
-        color: $primary_dark;
-    }
-}
-
 .clocks {
     display: flex;
-}
+    justify-content: center;
 
-.clock {
-    display: inline-block;
-    margin: 5px;
-    padding: 45px 20px;
-    // background-color: lightseagreen;
-
-    // border-top: 8px solid $primary_light;
-    background-color: $primary_light;
-    box-shadow: 0px 1px 5px hsla(0, 0%, 0%, 0.15);
-    // box-shadow: 0px 1px 5px $tertiary_dark;
-    border-radius: 3px;
-
-    * {
-        text-align: center;
-        color: $primary_dark;
+    .clock, .clockPlaceholder {
+        flex: 0 1 25%;
+        margin: 5px;
+        padding: 45px 20px;
+        background-color: $primary_light;
+        box-shadow: 0px 1px 5px hsla(0, 0%, 0%, 0.15);
+        border-radius: 3px;
     }
 
-    .time {
-        display: inline-block;
-        padding: 6px;
-
-        div {
-            padding: 3px;
+    .clock {
+        * {
+            text-align: center;
+            color: $primary_dark;
+        }
+    
+        .time {
+            display: inline-block;
+            padding: 6px;
+    
+            div {
+                padding: 3px;
+                font-family: Arkipelago;
+                font-size: ms(1);
+            }
+        }
+    }
+    
+    .clockPlaceholder {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    
+        h1 {
+            flex-basis: 100%;
             font-family: Arkipelago;
+            text-align: center;
+            color: $primary_dark;
+            
+        }
+
+        .form {
+            flex-basis: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            
+            input, button {
+                flex-basis: 100%;
+                color: $primary_dark;
+                text-align: center;
+                margin-top: 6px;
+                background-color: hsla(0, 100%, 100%, 0.65);
+                box-shadow: 0px 1px 1px hsla(0, 0%, 0%, 0.25);
+            }
+
+            input {
+                font-size: ms(0);
+                padding: 8px;
+                border: 0;
+                
+                &:first-of-type {
+                    margin-top: 0;
+                }
+
+                &::-webkit-datetime-edit,
+                &::-webkit-clear-button,
+                &::-webkit-inner-spin-button,
+                &::-webkit-calendar-picker-indicator
+                {
+                    opacity: 1;
+                }
+            }
+
+            button {
+                font-family: Arkipelago;
+                font-size: ms(1);
+                transition: box-shadow 0.5s ease;
+                &:hover {
+                    box-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.55);
+                }
+            }
         }
     }
 }
