Updating CTA styles

--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -186,22 +186,19 @@ $nav_height: 100px;
             button {
                 background-color: transparent;
                 color: $primary_dark_fade;
-                font-size: ms(0);
-                padding: 6px 8px;
+                font-size: ms(1);
+                margin-top: 12px;
+                padding: 12px 20px;
         
                 &:hover {
                     color: $primary_dark;
-                    margin-bottom: -2px;
-                    border-bottom: 2px solid $primary_dark;
-                    // color: $primary_light;
-                    // background-color: $primary_dark;
                 }
             }
 
             .signUp {
                 color: $primary_dark;
                 border: 2px solid $primary_dark;
-                // transition: margin-bottom 2s ease;
+
                 &:hover{
                     margin-bottom: 0;
                     // border-bottom: 0;
