--- a/ui/src/scss/colours.scss
+++ b/ui/src/scss/colours.scss
@@ -1,4 +1,5 @@
 $primary_dark: hsl(221, 71%, 15%);
+$primary_dark_hover: hsla(221, 71%, 15%, 0.75);
 $primary_dark_fade: hsla(221, 71%, 15%, 0.55);
 $secondary_dark: hsl(203, 85%, 27%);
 $tertiary_dark: hsl(182, 14%, 49%);
