Styling all forms to be consistent
- Removing auth check until infinite loop fix

--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -172,9 +172,9 @@ $nav_height: 100px;
                     opacity: 1;
                 }
     
-                &:first-of-type {
-                    margin-top: 0;
-                }
+                // &:first-of-type {
+                //     margin-top: 0;
+                // }
             }
         }
 
