--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -94,12 +94,17 @@ $nav_height: 100px;
 
 .clocks {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    margin: 25px 45px;
 
+    .clockBox {
+        flex: 0 1 33.33%;
+        padding: 5px;
+    }
     .clock, .clockPlaceholder {
-        flex: 0 1 25%;
-        margin: 5px;
-        padding: 45px 20px;
+        // height: 100%;
+        padding: 35px 20px;
         background-color: $primary_light;
         box-shadow: 0px 1px 5px hsla(0, 0%, 0%, 0.15);
         border-radius: 3px;
