Adding primary negative colour

--- a/ui/src/scss/colours.scss
+++ b/ui/src/scss/colours.scss
@@ -7,3 +7,5 @@ $tertiary_dark: hsl(182, 14%, 49%);
 $primary_light: hsl(41, 78%, 91%);
 $primary_light_fade: hsla(41, 78%, 91%, 0.55);
 $accent: hsl(30, 82%, 56%);
+
+$primary_negative: hsl(341, 79%, 48%);
