--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -235,7 +235,7 @@ $nav_height: 100px;
                 box-shadow: 0 0 0;
 
                 &:hover {
-                    color: $accent;
+                    color: $primary_negative;
                 }
             }
         }
